--- a/Frontend/client/my-app/src/index.css
+++ b/Frontend/client/my-app/src/index.css
@@ -18,6 +18,252 @@ code {
  * Copyright 2014-2021 Froala Labs
  */
 
+ .u-section-1 .u-sheet-1 {
+  min-height: 1172px;
+}
+
+.u-section-1 .u-text-1 {
+  font-size: 2.25rem;
+  width: 320px;
+  margin: 26px auto 0;
+}
+
+.u-section-1 .u-layout-wrap-1 {
+  margin: 34px 0 60px;
+}
+
+.u-section-1 .u-layout-cell-1 {
+  min-height: 826px;
+}
+
+.u-section-1 .u-container-layout-1 {
+  padding: 15px 0;
+}
+
+.u-section-1 .u-form-1 {
+  margin-bottom: 0;
+  margin-top: 0;
+  height: 160px;
+}
+
+.u-section-1 .u-layout-cell-2 {
+  min-height: 826px;
+  background-image: none;
+}
+
+.u-section-1 .u-container-layout-2 {
+  padding: 0;
+}
+
+.u-section-1 .u-product-1 {
+  min-height: 314px;
+  height: auto;
+  width: 563px;
+  margin: 13px auto 0;
+}
+
+.u-section-1 .u-container-layout-3 {
+  padding: 0;
+}
+
+.u-section-1 .u-image-1 {
+  width: 214px;
+  height: 214px;
+  margin: 8px auto 0 8px;
+}
+
+.u-section-1 .u-text-2 {
+  margin: -200px 0 0 247px;
+}
+
+.u-section-1 .u-text-3 {
+  margin: 8px 28px 0 247px;
+}
+
+.u-section-1 .u-btn-2 {
+  background-image: none;
+  padding: 0;
+}
+
+.u-section-1 .u-text-4 {
+  margin: 22px 15px 0;
+}
+
+.u-section-1 .u-line-1 {
+  width: 559px;
+  top: 265px;
+  transform-origin: right center;
+  position: absolute;
+}
+
+.u-section-1 .u-layout-cell-3 {
+  min-height: 826px;
+}
+
+.u-section-1 .u-container-layout-4 {
+  padding: 0 0 30px;
+}
+
+.u-section-1 .u-table-1 {
+  margin-top: 15px;
+  margin-bottom: 0;
+}
+
+.u-block-c8e7-85 {
+  height: 47px;
+}
+
+.u-section-1 .u-table-cell-1 {
+  border-style: solid;
+}
+
+.u-block-c8e7-90 {
+  height: 47px;
+}
+
+@media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1027px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 681px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    background-position: 50% 50%;
+    min-height: 681px;
+  }
+
+  .u-section-1 .u-product-1 {
+    width: 481px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 165px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-left: 165px;
+  }
+
+  .u-section-1 .u-line-1 {
+    width: 481px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 681px;
+  }
+
+  .u-section-1 .u-table-1 {
+    margin-top: 173px;
+  }
+}
+
+@media (max-width: 991px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 446px;
+  }
+
+  .u-section-1 .u-layout-cell-1 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-layout-cell-2 {
+    min-height: 100px;
+  }
+
+  .u-section-1 .u-product-1 {
+    width: 367px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 51px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-left: 51px;
+  }
+
+  .u-section-1 .u-line-1 {
+    width: 367px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 406px;
+  }
+
+  .u-section-1 .u-table-1 {
+    margin-top: 198px;
+  }
+}
+
+@media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 546px;
+  }
+
+  .u-section-1 .u-layout-wrap-1 {
+    margin-top: 151px;
+    margin-right: initial;
+    margin-left: initial;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 319px;
+  }
+
+  .u-section-1 .u-table-1 {
+    margin-top: 111px;
+  }
+}
+
+@media (max-width: 575px) {
+  .u-section-1 .u-text-1 {
+    font-size: 1.875rem;
+  }
+
+  .u-section-1 .u-product-1 {
+    width: 340px;
+  }
+
+  .u-section-1 .u-text-2 {
+    margin-left: 24px;
+  }
+
+  .u-section-1 .u-text-3 {
+    margin-left: 24px;
+  }
+
+  .u-section-1 .u-line-1 {
+    width: 340px;
+  }
+
+  .u-section-1 .u-layout-cell-3 {
+    min-height: 312px;
+  }
+
+  .u-section-1 .u-table-1 {
+    margin-top: 104px;
+  }
+}.u-section-2 .u-sheet-1 {
+  min-height: 804px;
+
+}
+.right-table {
+	border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -khtml-border-radius: 20px;
+  border: 2px solid #000;
+  display: block;
+}
+
  .fr-clearfix::after {
   clear: both;
   display: block;
