--- a/Frontend/client/my-app/src/App.css
+++ b/Frontend/client/my-app/src/App.css
@@ -92,6 +92,30 @@
   margin: 8px auto 0 8px;
 }
 
+.long-descripton {
+  min-width: 800px;
+  clear: both;
+}
+
+.breaking-line {
+  white-space: pre-line;
+}
+
+.carousel-div {
+  min-width: 100%;
+  padding-right: 10px;
+}
+
+.u-section-1 .u-image-2 {
+  width: 257px;
+  height: 400px;
+  /* margin: 8px auto 0 8px; */
+}
+
+.min-width-800 {
+  min-width: 800px;
+}
+
 .u-section-1 .u-text-2 {
   margin: -200px 0 0 247px;
 }
