--- a/Frontend/client/my-app/src/App.css
+++ b/Frontend/client/my-app/src/App.css
@@ -102,13 +102,18 @@
 }
 
 .carousel-div {
-  min-width: 100%;
+  min-width: 257px;
+  min-height: 450px;
+  max-width: 270px;
+  max-height: 450px;
   padding-right: 10px;
 }
 
 .u-section-1 .u-image-2 {
-  width: 257px;
-  height: 400px;
+  min-width: 257px;
+  min-height: 400px;
+  max-width: 257px;
+  max-height: 400px;
   /* margin: 8px auto 0 8px; */
 }
 
